[package]
name = "rustcryptfs"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
base64 = "0.13.0"
rustls = "0.20.2"
scrypt = "0.8"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
aes= "0.8.1"
aes-gcm = "0.9.4"
hkdf = "0.12.2"
sha2 = "0.10.2"
cipher = "0.4.3"
clap = { version = "3.1.18", features = ["derive"] }
log = "0.4.17"
eme-mode = "0.3.1"