[package]
name = "rustcryptfs-lib"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A library that implement gocryptfs-related operations"
repository = "https://github.com/oupson/rustcryptfs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
scrypt = "0.8"
serde = { version = "1.0", features = ["derive"] }
aes= "0.8"
aes-gcm = "0.9"
hkdf = { version = "0.12", features = ["std"] }
sha2 = "0.10"
cipher = "0.4"
eme-mode = "0.3"
thiserror = "1.0"
serde_json = "1.0"