[package]
name = "rustcryptfs"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["mount"]
mount = ["rustcryptfs-mount"]

[dependencies]
anyhow = "1.0.53"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
clap = { version = "3.1.18", features = ["derive"] }
log = "0.4.17"
rustcryptfs-lib = { path = "../rustcryptfs-lib" }
env_logger = "0.9.0"
rpassword = "7.0.0"
rustcryptfs-mount = { path = "../rustcryptfs-mount", optional = true }